--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
-    <img src="images/1.jpg" alt="a fox picture">
+    <img src="images/1.jepg" alt="a fox picture">
     <button class="add-button">Install</button>
   </body>
 </html>
